test/files/neg/nopredefs.check
nopredefs.scala:5: error: not found: value Set (similar: Seq)
  val y = Set(3)
          ^
one error found
